fix success message on mobile

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -736,6 +736,10 @@ span {
     font-size: 1.5em;
   }
 
+  h3 {
+    font-size: 1em;
+  }
+
   p {
     font-size: 1em;
   }
@@ -747,6 +751,11 @@ span {
   }
 
   h2 {
+    font-size: 0.8em;
+  }
+
+  h3 {
+    text-align: center;
     font-size: 0.8em;
   }
 
